Adding blank target for ingresar button

--- a/equipo/Carmen_Sarazua.html
+++ b/equipo/Carmen_Sarazua.html
@@ -35,7 +35,7 @@
                         <li class="nav-item"><a class="nav-link" href="../conocenos.html">Conocenos</a></li>
                         <li class="nav-item"><a class="nav-link" href="https://shaloomrecursos.super.site/">Recursos</a></li>
                         <li class="nav-item"><a class="nav-link" href="../contactanos.html">Contactanos</a></li>
-                        <li class="nav-item"><a class="btn  btn-outline-custom btn-sm" href="https://shaloom-academy.sabionet.com/">Ingresar</a></li>
+                        <li class="nav-item"><a class="btn  btn-outline-custom btn-sm" href="https://shaloom-academy.sabionet.com/" target="_blank">Ingresar</a></li>
                     </ul>
                 </div>
             </div>
