Changing img src

--- a/cursos.html
+++ b/cursos.html
@@ -6,7 +6,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Shaloom - Project</title>
-        <link rel="icon" type="image/x-icon" href="assets/Turtle logo.png" />
+        <link rel="icon" type="image/x-icon" href="https://shaloom-project.sirv.com/Shaloom%20Images/Turtle%20logo.png" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -24,7 +24,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
             <div class="container  px-5">
                 <a class="navbar-brand" href="#page-top">
-                    <img src="./assets/logo+name.png" alt="shaloom-logo">
+                    <img src="https://shaloom-project.sirv.com/Shaloom%20Images/logo%2Bname.png" alt="shaloom-logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -106,7 +106,7 @@
                     <div class="row  g-4 row-cols-1 row-cols-md-2 row-cols-lg-3 mb-4">  
                         <div class="col">
                             <div class="card shadow h-100 border-0" id="carmen-sarazua-curso_milagros">
-                                <img class="card-img-top " src="./assets/img/Cursos-images/reflexiones-un-curso-de-milagros.png" alt="img">
+                                <img class="card-img-top " src="https://shaloom-project.sirv.com/Shaloom%20Images/imgs/Cursos-images/reflexiones-un-curso-de-milagros.png" alt="img">
                                 <div class="card-body p-4">
 
                                     <div class="d-flex align-content-center  justify-content-start">
@@ -123,7 +123,7 @@
                                 <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
                                     <div class="d-flex align-items-end justify-content-between">
                                         <div class="d-flex align-items-center">
-                                            <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." />
+                                            <img class="rounded-circle me-3" src="https://shaloom-project.sirv.com/Shaloom%20Images/Thumbnails/Carmen_sample.png" width="40" height="40" alt="..." />
                                             <div class="small">
                                                 <div class="fw-bold text-dark">Carmen Sarasua</div>
                                                 <div class="text-muted">Facilitadora &middot; Curso de Milagros</div>
@@ -135,7 +135,7 @@
                         </div>
                         <div class="col">
                             <div class="card shadow h-100 border-0">
-                                <img class="card-img-top" src="./assets/img/Cursos-images/art.png" alt="img">
+                                <img class="card-img-top" src="https://shaloom-project.sirv.com/Shaloom%20Images/imgs/Cursos-images/art.png" alt="img">
                                 <div class="card-body p-4">
 
                                     <div class="d-flex align-content-center  justify-content-start">
@@ -152,7 +152,7 @@
                                 <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
                                     <div class="d-flex align-items-end justify-content-between">
                                         <div class="d-flex align-items-center">
-                                            <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." />
+                                            <img class="rounded-circle me-3" src="https://shaloom-project.sirv.com/Shaloom%20Images/Thumbnails/Carmen_sample.png" width="40" height="40" alt="..." />
                                             <div class="small">
                                                 <div class="fw-bold text-dark">Daniela Acosta</div>
                                                 <div class="text-muted">Facilitadora &middot; Arte para niños</div>
@@ -164,7 +164,7 @@
                         </div>
                         <div class="col">
                             <div class="card shadow h-100 border-0">
-                                <img class="card-img-top" src="./assets/img/Cursos-images/coaching.png" alt="img">
+                                <img class="card-img-top" src="https://shaloom-project.sirv.com/Shaloom%20Images/imgs/Cursos-images/coaching.png" alt="img">
                                 <div class="card-body p-4">
 
                                     <div class="d-flex align-content-center  justify-content-start">
@@ -181,7 +181,7 @@
                                 <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
                                     <div class="d-flex align-items-end justify-content-between">
                                         <div class="d-flex align-items-center">
-                                            <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." />
+                                            <img class="rounded-circle me-3" src="https://shaloom-project.sirv.com/Shaloom%20Images/Thumbnails/Carmen_sample.png" width="40" height="40" alt="..." />
                                             <div class="small">
                                                 <div class="fw-bold text-dark">Daniela Acosta</div>
                                                 <div class="text-muted">Facilitadora &middot; Coaching integral</div>
@@ -195,7 +195,7 @@
 
                         <div class="col">
                             <div class="card shadow h-100 border-0">
-                                <img class="card-img-top" src="./assets/img/Cursos-images/conscious-entrepreneurship.png" alt="img">
+                                <img class="card-img-top" src="https://shaloom-project.sirv.com/Shaloom%20Images/imgs/Cursos-images/conscious-entrepreneurship.png" alt="img">
                                 <div class="card-body p-4">
 
                                     <div class="d-flex align-content-center  justify-content-start">
@@ -212,7 +212,7 @@
                                 <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
                                     <div class="d-flex align-items-end justify-content-between">
                                         <div class="d-flex align-items-center">
-                                            <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." />
+                                            <img class="rounded-circle me-3" src="https://shaloom-project.sirv.com/Shaloom%20Images/Thumbnails/Carmen_sample.png" width="40" height="40" alt="..." />
                                             <div class="small">
                                                 <div class="fw-bold text-dark">Daniela Acosta</div>
                                                 <div class="text-muted">Facilitadora &middot; Emprendimiento Consciente</div>
@@ -224,7 +224,7 @@
                         </div>
                         <div class="col">
                             <div class="card shadow h-100 border-0">
-                                <img class="card-img-top" src="./assets/img/Cursos-images/dance.png" alt="img">
+                                <img class="card-img-top" src="https://shaloom-project.sirv.com/Shaloom%20Images/imgs/Cursos-images/dance.png" alt="img">
                                 <div class="card-body p-4">
 
                                     <div class="d-flex align-content-center  justify-content-start">
@@ -241,7 +241,7 @@
                                 <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
                                     <div class="d-flex align-items-end justify-content-between">
                                         <div class="d-flex align-items-center">
-                                            <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." />
+                                            <img class="rounded-circle me-3" src="https://shaloom-project.sirv.com/Shaloom%20Images/Thumbnails/Carmen_sample.png" width="40" height="40" alt="..." />
                                             <div class="small">
                                                 <div class="fw-bold text-dark">Daniela Acosta</div>
                                                 <div class="text-muted">Facilitadora &middot; Danza para la vida</div>
@@ -253,7 +253,7 @@
                         </div>
                         <div class="col">
                             <div class="card shadow h-100 border-0">
-                                <img class="card-img-top" src="./assets/img/Cursos-images/equilibrium.png" alt="img">
+                                <img class="card-img-top" src="https://shaloom-project.sirv.com/Shaloom%20Images/imgs/Cursos-images/equilibrium.png" alt="img">
                                 <div class="card-body p-4">
 
                                     <div class="d-flex align-content-center  justify-content-start">
@@ -270,7 +270,7 @@
                                 <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
                                     <div class="d-flex align-items-end justify-content-between">
                                         <div class="d-flex align-items-center">
-                                            <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." />
+                                            <img class="rounded-circle me-3" src="https://shaloom-project.sirv.com/Shaloom%20Images/Thumbnails/Carmen_sample.png" width="40" height="40" alt="..." />
                                             <div class="small">
                                                 <div class="fw-bold text-dark">Daniela Acosta</div>
                                                 <div class="text-muted">Facilitadora &middot; Equilibrio todo un arte</div>
@@ -287,7 +287,7 @@
                     <div class="row  g-4 row-cols-1 row-cols-md-2 row-cols-lg-3 mb-4">  
                         <div class="col">
                             <div class="card shadow h-100 border-0">
-                                <img class="card-img-top" src="./assets/img/Cursos-images/healing-sound.png" alt="img">
+                                <img class="card-img-top" src="https://shaloom-project.sirv.com/Shaloom%20Images/imgs/Cursos-images/healing-sound.png" alt="img">
                                 <div class="card-body p-4">
 
                                     <div class="d-flex align-content-center  justify-content-start">
@@ -304,7 +304,7 @@
                                 <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
                                     <div class="d-flex align-items-end justify-content-between">
                                         <div class="d-flex align-items-center">
-                                            <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." />
+                                            <img class="rounded-circle me-3" src="https://shaloom-project.sirv.com/Shaloom%20Images/Thumbnails/Carmen_sample.png" width="40" height="40" alt="..." />
                                             <div class="small">
                                                 <div class="fw-bold text-dark">Daniela Acosta</div>
                                                 <div class="text-muted">Facilitadora &middot; Sonidos sanadores</div>
@@ -316,7 +316,7 @@
                         </div>
                         <div class="col">
                             <div class="card shadow h-100 border-0">
-                                <img class="card-img-top" src="./assets/img/Cursos-images/meditation.png" alt="img">
+                                <img class="card-img-top" src="https://shaloom-project.sirv.com/Shaloom%20Images/imgs/Cursos-images/meditation.png" alt="img">
                                 <div class="card-body p-4">
 
                                     <div class="d-flex align-content-center  justify-content-start">
@@ -333,7 +333,7 @@
                                 <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
                                     <div class="d-flex align-items-end justify-content-between">
                                         <div class="d-flex align-items-center">
-                                            <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." />
+                                            <img class="rounded-circle me-3" src="https://shaloom-project.sirv.com/Shaloom%20Images/Thumbnails/Carmen_sample.png" width="40" height="40" alt="..." />
                                             <div class="small">
                                                 <div class="fw-bold text-dark">Daniela Acosta</div>
                                                 <div class="text-muted">Facilitadora &middot; Curso de Meditación</div>
@@ -345,7 +345,7 @@
                         </div>
                         <div class="col">
                             <div class="card shadow h-100 border-0">
-                                <img class="card-img-top" src="./assets/img/Cursos-images/pranayama.png" alt="img">
+                                <img class="card-img-top" src="https://shaloom-project.sirv.com/Shaloom%20Images/imgs/Cursos-images/pranayama.png" alt="img">
                                 <div class="card-body p-4">
 
                                     <div class="d-flex align-content-center  justify-content-start">
@@ -362,7 +362,7 @@
                                 <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
                                     <div class="d-flex align-items-end justify-content-between">
                                         <div class="d-flex align-items-center">
-                                            <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." />
+                                            <img class="rounded-circle me-3" src="https://shaloom-project.sirv.com/Shaloom%20Images/Thumbnails/Carmen_sample.png" width="40" height="40" alt="..." />
                                             <div class="small">
                                                 <div class="fw-bold text-dark">Daniela Acosta</div>
                                                 <div class="text-muted">Facilitadora &middot; El arte de respirar</div>
@@ -376,7 +376,7 @@
 
                         <div class="col">
                             <div class="card shadow h-100 border-0">
-                                <img class="card-img-top" src="./assets/img/Cursos-images/relaxation.png" alt="img">
+                                <img class="card-img-top" src="https://shaloom-project.sirv.com/Shaloom%20Images/imgs/Cursos-images/relaxation.png" alt="img">
                                 <div class="card-body p-4">
 
                                     <div class="d-flex align-content-center  justify-content-start">
@@ -393,7 +393,7 @@
                                 <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
                                     <div class="d-flex align-items-end justify-content-between">
                                         <div class="d-flex align-items-center">
-                                            <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." />
+                                            <img class="rounded-circle me-3" src="https://shaloom-project.sirv.com/Shaloom%20Images/Thumbnails/Carmen_sample.png" width="40" height="40" alt="..." />
                                             <div class="small">
                                                 <div class="fw-bold text-dark">Daniela Acosta</div>
                                                 <div class="text-muted">Facilitadora &middot; Relajación total</div>
@@ -405,7 +405,7 @@
                         </div>
                         <div class="col">
                             <div class="card shadow h-100 border-0">
-                                <img class="card-img-top" src="./assets/img/Cursos-images/theory-u.png" alt="img">
+                                <img class="card-img-top" src="https://shaloom-project.sirv.com/Shaloom%20Images/imgs/Cursos-images/theory-u.png" alt="img">
                                 <div class="card-body p-4">
 
                                     <div class="d-flex align-content-center  justify-content-start">
@@ -422,7 +422,7 @@
                                 <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
                                     <div class="d-flex align-items-end justify-content-between">
                                         <div class="d-flex align-items-center">
-                                            <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." />
+                                            <img class="rounded-circle me-3" src="https://shaloom-project.sirv.com/Shaloom%20Images/Thumbnails/Carmen_sample.png" width="40" height="40" alt="..." />
                                             <div class="small">
                                                 <div class="fw-bold text-dark">Maria Antonieta</div>
                                                 <div class="text-muted">Facilitadora &middot; Curso Teoria U</div>
@@ -434,7 +434,7 @@
                         </div>
                         <div class="col">
                             <div class="card shadow h-100 border-0">
-                                <img class="card-img-top" src="./assets/img/Cursos-images/walking-meditation.png" alt="img">
+                                <img class="card-img-top" src="https://shaloom-project.sirv.com/Shaloom%20Images/imgs/Cursos-images/walking-meditation.png" alt="img">
                                 <div class="card-body p-4">
 
                                     <div class="d-flex align-content-center  justify-content-start">
@@ -451,7 +451,7 @@
                                 <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
                                     <div class="d-flex align-items-end justify-content-between">
                                         <div class="d-flex align-items-center">
-                                            <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." />
+                                            <img class="rounded-circle me-3" src="https://shaloom-project.sirv.com/Shaloom%20Images/Thumbnails/Carmen_sample.png" width="40" height="40" alt="..." />
                                             <div class="small">
                                                 <div class="fw-bold text-dark">Tania</div>
                                                 <div class="text-muted">Facilitadora &middot; Laberinto Meditativo</div>
