--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Shaloom - Project</title>
-        <link rel="icon" type="image/x-icon" href="assets/Turtle logo.png" />
+        <link rel="icon" type="image/x-icon" href="https://shaloom-project.sirv.com/Shaloom%20Images/Turtle%20logo.png" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -25,7 +25,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
             <div class="container  px-5">
                 <a class="navbar-brand" href="#page-top">
-                    <img src="./assets/logo+name.png" alt="shaloom-logo">
+                    <img src="https://shaloom-project.sirv.com/Shaloom%20Images/logo%2Bname.png" alt="shaloom-logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -54,7 +54,7 @@
                         </div>
                         <!--https://dummyimage.com/600x400/343a40/6c757d-->
                         <div class="col-md-10  col-lg-6 col-xl-6 text-center ">
-                            <img class="img-fluid rounded-3 mt-3 mb-2 " src="./assets/img/Landing-image.png" alt="welcome img">
+                            <img class="img-fluid rounded-3 mt-3 mb-2 " src="https://shaloom-project.sirv.com/Shaloom%20Images/imgs/Landing-image.png" alt="welcome img">
                         </div>
                     </div>
                 </div>
@@ -63,10 +63,10 @@
             <div class="bg-circle-2 bg-circle"></div>
             <div class="bg-circle-3 bg-circle"></div>
             <div class="bg-circle-4 bg-circle"></div>
-            <img class="bg-image bg-circle" src="./assets/dance.png" alt="dance">
-            <img class="bg-image-2 bg-circle" src="./assets/yoga-illustration.png" alt="yoga">
-            <img class="bg-image-3 bg-circle" src="./assets/walking-illustration.png" alt="walking">
-            <img class="bg-image-4 bg-circle" src="./assets/earth-illustration.png" alt="earth">
+            <img class="bg-image bg-circle" src="https://shaloom-project.sirv.com/Shaloom%20Images/dance.png" alt="dance">
+            <img class="bg-image-2 bg-circle" src="https://shaloom-project.sirv.com/Shaloom%20Images/yoga-illustration.png" alt="yoga">
+            <img class="bg-image-3 bg-circle" src="https://shaloom-project.sirv.com/Shaloom%20Images/walking-illustration.png" alt="walking">
+            <img class="bg-image-4 bg-circle" src="https://shaloom-project.sirv.com/Shaloom%20Images/earth-illustration.png" alt="earth">
         </header>
 
         
