--- a/equipo/Carmen_Sarazua.html
+++ b/equipo/Carmen_Sarazua.html
@@ -6,7 +6,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Shaloom - Project</title>
-        <link rel="icon" type="image/x-icon" href="assets/Turtle logo.png" />
+        <link rel="icon" type="image/x-icon" href="https://shaloom-project.sirv.com/Shaloom%20Images/Turtle%20logo.png" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -25,7 +25,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
             <div class="container  px-5">
                 <a class="navbar-brand" href="#page-top">
-                    <img src="../assets/logo+name.png" alt="shaloom-logo">
+                    <img src="https://shaloom-project.sirv.com/Shaloom%20Images/logo%2Bname.png" alt="shaloom-logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
