changing img src for profile page

--- a/equipo/Carmen_Sarazua.html
+++ b/equipo/Carmen_Sarazua.html
@@ -49,7 +49,7 @@
                         <div class="col-lg-3">
                             <div class="mt-lg-5 mb-4">
                                 <!--Image 180px-180px-->
-                                <img class="img-fluid rounded-circle author-image" src="../assets/Thumbnails/Carmen_sample.png" alt="..." />
+                                <img class="img-fluid rounded-circle author-image" src="https://shaloom-project.sirv.com/Shaloom%20Images/Thumbnails/Carmen_sample.png" alt="..." />
                             </div>
                         </div>
                         <div class="col-lg-9">
