Adding fluid to an img

--- a/cursos/curso-de-milagros.html
+++ b/cursos/curso-de-milagros.html
@@ -262,7 +262,7 @@
                         </div>
                         <div class="col-lg-6">
                             <div class="text-center">
-                                <div class="facilitator-img"><img class="rounded-3" src="https://shaloom-project.sirv.com/Shaloom%20Images/imgs/Cursos-images/meditation.png" alt="..."></div>
+                                <div class="facilitator-img"><img class="rounded-3 img-fluid" src="https://shaloom-project.sirv.com/Shaloom%20Images/imgs/Cursos-images/meditation.png" alt="..."></div>
                             </div>
                         </div>
                     </div>
