Adding category badge + assinging category to courses

--- a/cursos.html
+++ b/cursos.html
@@ -101,16 +101,59 @@
                             </div>
                         </div>
                     </div>
+            <!--Category section with pill buttons-->
+
+            <div class=" py-3 rounded-3 ">
+                <div class="container  px-5 text-center fs-4 ">
+                    <div class="row  m-0 g-3">
+                        <div class="col">
+                            <a class="badge rounded-pill bg-light text-decoration-none link-dark p-2 shadow-pills" href="#!" id="todos">Todos</a>
+                        </div>
+                        <div class="col">
+                            <a class="badge rounded-pill bg-light text-decoration-none link-dark p-2 shadow-pills" href="#!" id="mente-espiritu">Mente y Espiritu</a>
+                        </div>
+                        <div class="col">
+                            <a class="badge rounded-pill bg-light text-decoration-none link-dark p-2 shadow-pills" href="#!" id="cuerpo">Cuerpo</a>
+                        </div>
+                        <div class="col">
+                            <a class="badge rounded-pill bg-light text-decoration-none link-dark p-2 shadow-pills" href="#!" id="relajacion">Relajación Profunda</a>
+                        </div>
+                    </div>
+                    <div class="row  m-0 g-3">
+                        <div class="col">
+                            <a class="badge rounded-pill bg-light text-decoration-none link-dark p-2 shadow-pills" href="#!" id="alimentacion">Alimentación consciente</a>
+                        </div>
+                        <div class="col">
+                            <a class="badge rounded-pill bg-light text-decoration-none link-dark p-2 shadow-pills" href="#!" id="respiracion">Respiración</a>
+                        </div>
+                        <div class="col">
+                            <a class="badge rounded-pill bg-light text-decoration-none link-dark p-2 shadow-pills" href="#!" id="presencia-emociones">Presencia y emociones</a>
+                        </div>
+                    </div>
+                    <div class="row  m-0 g-3">
+                        <div class="col">
+                            <a class="badge rounded-pill bg-light text-decoration-none link-dark p-2 shadow-pills" href="#!" id="educacion-familia">Educación y familia</a>
+                        </div>
+                        <div class="col">
+                            <a class="badge rounded-pill bg-light text-decoration-none link-dark p-2 shadow-pills" href="#!" id="servicio-sociedad">Servicio y sociedad</a>
+                        </div>
+                        <div class="col">
+                            <a class="badge rounded-pill bg-light text-decoration-none link-dark p-2 shadow-pills" href="#!" id="Escucha-plena">Escucha plena</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
                 <!--Here starts #1 row cards ......-->
                 <!--https://dummyimage.com/600x450/72c9c9/72c9c9.png-->
-                    <div class="row  g-4 row-cols-1 row-cols-md-2 row-cols-lg-3 mb-4">  
+                    <div class="row  g-4 row-cols-1 row-cols-md-2 row-cols-lg-3 mb-4 mt-4">  
                         <div class="col">
                             <div class="card shadow h-100 border-0" id="carmen-sarazua-curso_milagros">
                                 <img class="card-img-top " src="https://shaloom-project.sirv.com/Shaloom%20Images/imgs/Cursos-images/reflexiones-un-curso-de-milagros.png" alt="img">
                                 <div class="card-body p-4">
 
                                     <div class="d-flex align-content-center  justify-content-start">
-                                        <span class="badge bg-success mx-1 rounded-pill mb-2">Category</span>
+                                        <span class="badge bg-success mx-1 rounded-pill mb-2" category="mente-espiritu">Mente y Espiritu</span>
                                         <span class="badge bg-success mx-1  rounded-pill mb-2">Category</span>
                                     </div>
 
@@ -139,7 +182,7 @@
                                 <div class="card-body p-4">
 
                                     <div class="d-flex align-content-center  justify-content-start">
-                                        <span class="badge bg-success mx-1 rounded-pill mb-2">Category</span>
+                                        <span class="badge bg-success mx-1 rounded-pill mb-2" category="presencia-emociones">Presencia y emociones</span>
                                         <span class="badge bg-success mx-1  rounded-pill mb-2">Category</span>
                                     </div>
 
@@ -168,7 +211,7 @@
                                 <div class="card-body p-4">
 
                                     <div class="d-flex align-content-center  justify-content-start">
-                                        <span class="badge bg-success mx-1 rounded-pill mb-2">Category</span>
+                                        <span class="badge bg-success mx-1 rounded-pill mb-2" category="servicio-sociedad">Servicio y sociedad</span>
                                         <span class="badge bg-success mx-1  rounded-pill mb-2">Category</span>
                                     </div>
 
@@ -199,7 +242,7 @@
                                 <div class="card-body p-4">
 
                                     <div class="d-flex align-content-center  justify-content-start">
-                                        <span class="badge bg-success mx-1 rounded-pill mb-2">Category</span>
+                                        <span class="badge bg-success mx-1 rounded-pill mb-2" category="educacion-familia">Educación y familia</span>
                                         <span class="badge bg-success mx-1  rounded-pill mb-2">Category</span>
                                     </div>
 
@@ -228,7 +271,7 @@
                                 <div class="card-body p-4">
 
                                     <div class="d-flex align-content-center  justify-content-start">
-                                        <span class="badge bg-success mx-1 rounded-pill mb-2">Category</span>
+                                        <span class="badge bg-success mx-1 rounded-pill mb-2" category="presencia-emociones">Presencia y emociones</span>
                                         <span class="badge bg-success mx-1  rounded-pill mb-2">Category</span>
                                     </div>
 
@@ -257,7 +300,7 @@
                                 <div class="card-body p-4">
 
                                     <div class="d-flex align-content-center  justify-content-start">
-                                        <span class="badge bg-success mx-1 rounded-pill mb-2">Category</span>
+                                        <span class="badge bg-success mx-1 rounded-pill mb-2" category="relajacion-profunda">Relajación profunda</span>
                                         <span class="badge bg-success mx-1  rounded-pill mb-2">Category</span>
                                     </div>
 
@@ -291,7 +334,7 @@
                                 <div class="card-body p-4">
 
                                     <div class="d-flex align-content-center  justify-content-start">
-                                        <span class="badge bg-success mx-1 rounded-pill mb-2">Category</span>
+                                        <span class="badge bg-success mx-1 rounded-pill mb-2" category="escucha-plena">Escucha plena</span>
                                         <span class="badge bg-success mx-1  rounded-pill mb-2">Category</span>
                                     </div>
 
@@ -320,7 +363,7 @@
                                 <div class="card-body p-4">
 
                                     <div class="d-flex align-content-center  justify-content-start">
-                                        <span class="badge bg-success mx-1 rounded-pill mb-2">Category</span>
+                                        <span class="badge bg-success mx-1 rounded-pill mb-2" category="mente-espiritu">Mente y espiritu</span>
                                         <span class="badge bg-success mx-1  rounded-pill mb-2">Category</span>
                                     </div>
 
@@ -349,7 +392,7 @@
                                 <div class="card-body p-4">
 
                                     <div class="d-flex align-content-center  justify-content-start">
-                                        <span class="badge bg-success mx-1 rounded-pill mb-2">Category</span>
+                                        <span class="badge bg-success mx-1 rounded-pill mb-2" category="respiracion">Respiración</span>
                                         <span class="badge bg-success mx-1  rounded-pill mb-2">Category</span>
                                     </div>
 
@@ -380,7 +423,7 @@
                                 <div class="card-body p-4">
 
                                     <div class="d-flex align-content-center  justify-content-start">
-                                        <span class="badge bg-success mx-1 rounded-pill mb-2">Category</span>
+                                        <span class="badge bg-success mx-1 rounded-pill mb-2" category="relajacion-profunda">Relajación profunda</span>
                                         <span class="badge bg-success mx-1  rounded-pill mb-2">Category</span>
                                     </div>
 
@@ -409,7 +452,7 @@
                                 <div class="card-body p-4">
 
                                     <div class="d-flex align-content-center  justify-content-start">
-                                        <span class="badge bg-success mx-1 rounded-pill mb-2">Category</span>
+                                        <span class="badge bg-success mx-1 rounded-pill mb-2" category="cuerpo">Cuerpo</span>
                                         <span class="badge bg-success mx-1  rounded-pill mb-2">Category</span>
                                     </div>
 
@@ -438,7 +481,7 @@
                                 <div class="card-body p-4">
 
                                     <div class="d-flex align-content-center  justify-content-start">
-                                        <span class="badge bg-success mx-1 rounded-pill mb-2">Category</span>
+                                        <span class="badge bg-success mx-1 rounded-pill mb-2" category="alimentacion-consciente">Alimentación consciente</span>
                                         <span class="badge bg-success mx-1  rounded-pill mb-2">Category</span>
                                     </div>
 
