tuning opacity + margin in one section

--- a/cursos/curso-de-milagros.html
+++ b/cursos/curso-de-milagros.html
@@ -247,7 +247,7 @@
             <section>
                 <div class="container px-5 mb-5">
                     <div class="row gx-1 align-items-start justify-content-center">
-                        <h1 class="text-center mb-lg-5 mb-md-3">Acerca del facilitador</h1>
+                        <h1 class="text-center mb-lg-5 mb-md-3 mb-3">Acerca del facilitador</h1>
                         <div class="col-lg-6">
                             <div class="text-start mb-4">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio
@@ -258,7 +258,7 @@
                                     Ratione voluptatum molestiae adipisci, beatae obcaecati.
                                 </p>
                             </div>
-                            <div> <a class="btn btn-outline-dark m-2 fw-bold" href="../equipo/Carmen_Sarazua.html">Conocer más</a></div>
+                            <div class="mb-4"> <a class="btn btn-outline-dark m-2 fw-bold" href="../equipo/Carmen_Sarazua.html">Conocer más</a></div>
                         </div>
                         <div class="col-lg-6">
                             <div class="text-center">
